@@ -1,3 +1,8 @@
+2003-03-01  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-headers-values.ads, aws-headers-values.adb:
+	(Exist_Unnamed_Value): New routine.
+
 2003-02-28  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-ldap-client.ads:
